# bamcensus

./: .gitignore  Cargo.toml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: python-release.yml  rust-release.yaml  rust.yaml  rust.yml
bamcensus/: Cargo.toml  README.md
bamcensus-acs/: Cargo.toml  README.md
bamcensus-acs/python/: codegen.py
bamcensus-acs/src/api/: acs_api.rs
bamcensus-acs/src/model/: acs_api_query_params.rs  acs_geoid_query.rs  acs_value.rs  mod.rs
bamcensus-acs/src/ops/: acs_agg.rs  mod.rs
bamcensus-app-py/: Cargo.toml  pyproject.toml
bamcensus-app-py/python/uscensus/: __init__.py
bamcensus-app-py/src/: acs_tiger_python.rs  lib.rs  wac_tiger_python.rs
bamcensus-core/: Cargo.toml  README.md
bamcensus-core/src/model/identifier/: geoid.rs  geoid_type.rs
bamcensus-core/src/ops/agg/: mod.rs
bamcensus-lehd/: Cargo.toml  README.md
bamcensus-lehd/src/: main.rs
bamcensus-lehd/src/api/: lodes_api.rs
bamcensus-lehd/src/model/: constants.rs  lodes_dataset.rs  lodes_job_type.rs  mod.rs  od_part.rs  wac_row.rs  workplace_segment.rs
bamcensus-lehd/src/ops/: lodes_agg.rs  mod.rs
bamcensus-py/: Cargo.toml  README.md  pyproject.toml
bamcensus-py/python/bamcensus/: __init__.py
bamcensus-py/python/tests/: test_all.py
bamcensus-py/src/: lib.rs
bamcensus-tiger/: Cargo.toml  README.md
bamcensus-tiger/src/: lib.rs
bamcensus-tiger/src/model/: tiger_resource.rs  tiger_uri_builder.rs
bamcensus-tiger/src/ops/: tiger_api.rs
bamcensus/src/: lib.rs  main.rs
bamcensus/src/app/: acs_tiger.rs  lodes_tiger.rs  lodes_tiger_args.rs  mod.rs
bamcensus/src/model/: acs_tiger_output_row.rs  acs_tiger_row.rs  lodes_tiger_output_row.rs  lodes_wac_tiger_row.rs  mod.rs
bamcensus/src/ops/: join.rs  mod.rs
bamsoda/: Cargo.toml
bamsoda-acs/: Cargo.toml
bamsoda-acs/src/api/: acs_api.rs
bamsoda-acs/src/model/: acs_api_query_params.rs  acs_geoid_query.rs  acs_type.rs  acs_value.rs  constants.rs  mod.rs
bamsoda-acs/src/ops/: acs_agg.rs
bamsoda-app/: Cargo.toml
bamsoda-app-py/: Cargo.toml  pyproject.toml
bamsoda-app-py/python/tests/: test_all.py
bamsoda-app-py/python/uscensus/: __init__.py
bamsoda-app-py/src/: acs_tiger_python.rs  lib.rs  wac_tiger_python.rs
bamsoda-app/src/app/: acs_tiger.rs  lodes_tiger.rs  lodes_tiger_args.rs
bamsoda-app/src/model/: acs_tiger_output_row.rs  acs_tiger_row.rs  lodes_tiger_output_row.rs  lodes_wac_tiger_row.rs
bamsoda-core/: Cargo.toml
bamsoda-core/src/model/: mod.rs
bamsoda-core/src/model/acs/: acs_type.rs  mod.rs
bamsoda-core/src/model/fips/: mod.rs
bamsoda-core/src/model/identifier/: fips.rs  geoid.rs  has_geoid_string.rs  has_geoid_type.rs  mod.rs
bamsoda-core/src/model/lodes/: lodes_dataset.rs  mod.rs  wac_row.rs  wac_value.rs
bamsoda-core/src/ops/agg/: aggregation_function.rs  can_aggregate.rs  mod.rs  numeric_aggregation.rs
bamsoda-lehd/: Cargo.toml
bamsoda-lehd/src/: lib.rs  main.rs
bamsoda-lehd/src/api/: lodes_api.rs
bamsoda-lehd/src/model/: lodes_dataset.rs  lodes_edition.rs  mod.rs  od_job_segment.rs  od_row.rs  rac_row.rs  wac_segment.rs
bamsoda-lehd/src/model/lodes/: lodes_dataset.rs  mod.rs  wac_row.rs
bamsoda-lehd/src/ops/: lodes_agg.rs
bamsoda-tiger/: Cargo.toml
bamsoda-tiger/src/: lib.rs
bamsoda-tiger/src/model/: constants.rs  mod.rs  tiger_resource.rs  tiger_uri_builder.rs
bamsoda-tiger/src/ops/: tiger_api.rs
bamsoda/src/: main.rs
bamsoda/src/app/: acs_tiger.rs  lodes_tiger.rs  lodes_tiger_args.rs
bamsoda/src/model/: acs_tiger_output_row.rs  lodes_tiger_output_row.rs  lodes_wac_tiger_row.rs
bamsoda/src/ops/: join.rs
examples/: python_acs_example.ipynb  python_example.ipynb  python_lodes_example.ipynb
src/: lib.rs
src/config/: default.toml
src/model/: mod.rs
src/model/fips/: state_code.rs
src/model/identifier/: fips.rs  geoid.rs  geoid_string.rs  mod.rs
src/model/tiger/: mod.rs  ops.rs  tiger_file_type.rs  tiger_filename_format.rs  tiger_year.rs
us-census-acs/: Cargo.toml
us-census-acs/python/: codegen.py
us-census-acs/resources/: acs5_variables.csv
us-census-acs/src/api/: acs_api.rs  mod.rs
us-census-acs/src/model/: acs_api_query_params.rs  acs_geoid_query.rs  acs_type.rs  acs_value.rs  acs_year.rs  group.rs  mod.rs  variable.rs
us-census-acs/src/ops/: acs_agg.rs  acs_api.rs
us-census-api-py/: Cargo.toml  pyproject.toml
us-census-api-py/python/tests/: test_all.py
us-census-api-py/python/uscensus/: __init__.py
us-census-api-py/src/: acs_tiger_python.rs  app.rs  lib.rs  response.rs  us_census_python_app.rs  wac_tiger_python.rs
us-census-app/: Cargo.toml
us-census-app/src/: acs_tiger.rs  lib.rs  lodes_tiger.rs
us-census-app/src/app/: acs_tiger.rs  lodes_tiger_args.rs  mod.rs
us-census-app/src/model/: acs_tiger_output_row.rs  acs_tiger_row.rs  lodes_tiger_output_row.rs  lodes_wac_tiger_row.rs  mod.rs
us-census-app/src/ops/: join.rs
us-census-core/: Cargo.toml
us-census-core/src/: lib.rs
us-census-core/src/model/: mod.rs
us-census-core/src/model/acs/: acs_type.rs  acs_value.rs
us-census-core/src/model/fips/: state_code.rs
us-census-core/src/model/identifier/: fips.rs  geoid.rs  geoid_hierarchy_type.rs  geoid_type.rs  mod.rs
us-census-core/src/model/lodes/: lodes_dataset.rs  lodes_edition.rs  mod.rs  wac_row.rs
us-census-core/src/model/tiger/: tiger_url.rs
us-census-core/src/ops/agg/: aggregation_function.rs  mod.rs
us-census-core/src/util/: pb.rs
us-census-lehd/: Cargo.toml
us-census-lehd/src/: main.rs
us-census-lehd/src/api/: lodes_api.rs  mod.rs
us-census-lehd/src/model/: lodes.rs  mod.rs
us-census-lehd/src/model/api/: lodes_api.rs
us-census-lehd/src/model/lodes/: lodes_dataset.rs  lodes_edition.rs  lodes_job_type.rs  mod.rs  od_job_segment.rs  wac_row.rs  wac_segment.rs  wac_value.rs  workplace_segment.rs
us-census-lehd/src/ops/: lodes_agg.rs  lodes_ops.rs  mod.rs
us-census-tiger/: Cargo.toml
us-census-tiger/src/model/: mod.rs  tiger_resource.rs  tiger_uri.rs  tiger_uri_builder.rs  tiger_url.rs  tiger_year.rs
us-census-tiger/src/ops/: mod.rs  tiger_api.rs
