[package]
name = "bamcensus-acs"
version = "0.1.0"
license = "BSD-3-Clause"
edition = "2021"
readme = "README.md"
description = "Interaction with the American Community Survey API"
repository = "https://github.com/NREL/bamcensus-acs"
documentation = "https://docs.rs/bamcensus-acs"

[dependencies]
bamcensus-core = { path = "../bamcensus-core", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
itertools = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
kdam = { workspace = true }
