[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "bamcensus-app-py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[project.optional-dependencies]
tests = ["pytest"]
plot = ["matplotlib", "contextily"]
all = ["bamcensus-app-py[tests]", "bamcensus-app-py[plot]"]

[tool.maturin]
python-source = "python"
module-name = "uscensus"
features = ["pyo3/extension-module"]
