[package]
name = "bamcensus-core"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
description = "Common record types + operations for bamcensus crates"
repository = "https://github.com/NREL/bamcensus-core"
documentation = "https://docs.rs/bamcensus-core"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
