[package]
name = "bamcensus-lehd"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
description = "Work with Longitudinal Employer-Household Dynamics (LEHD) datasets"
repository = "https://github.com/NREL/bamcensus-lehd"
documentation = "https://docs.rs/bamcensus-lehd"

[dependencies]
bamcensus-core = { path = "../bamcensus-core", version = "0.1.0" }
tokio = { workspace = true }
rayon = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
csv = { workspace = true }
flate2 = { workspace = true }
kdam = { workspace = true }
