[package]
name = "bamcensus-py"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bamcensus_py"
crate-type = ["cdylib"]

[dependencies]
itertools = { workspace = true }
bamcensus-core = { path = "../bamcensus-core", version = "0.1.0" }
bamcensus-lehd = { path = "../bamcensus-lehd", version = "0.1.0" }
bamcensus-acs = { path = "../bamcensus-acs", version = "0.1.0" }
bamcensus = { path = "../bamcensus", version = "0.1.0" }
pyo3 = { version = "0.22.2", features = [
  "extension-module",
  "serde",
  "abi3-py310",
  # "experimental-async",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wkt = { workspace = true }
