[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "bamcensus-py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[project.optional-dependencies]
tests = ["pytest"]
plot = ["matplotlib", "contextily"]
all = ["bamcensus-py[tests]", "bamcensus-py[plot]"]

[tool.maturin]
python-source = "python"
module-name = "bamcensus"
features = ["pyo3/extension-module"]
