[package]
name = "bamcensus-tiger"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/NREL/bamcensus-tiger"
documentation = "https://docs.rs/bamcensus-tiger"
readme = "README.md"
description = "Work with geospatial data in the TIGER/Lines datasets"

[dependencies]
bamcensus-core = { path = "../bamcensus-core", version = "0.1.0" }
itertools = { workspace = true }
serde = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
shapefile = { workspace = true }
geo-types = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
kdam = { workspace = true }
log = { workspace = true }
