[package]
name = "bamcensus"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
exclude = ["test", "**/.DS_Store", "target/"]
readme = "README.md"
description = "The Behavior and Advanced Mobility Census Dataset Aggregator"

[dependencies]
env_logger = { workspace = true }
clap = { workspace = true }
bamcensus-core = { path = "../bamcensus-core" }
bamcensus-acs = { path = "../bamcensus-acs" }
bamcensus-lehd = { path = "../bamcensus-lehd" }
bamcensus-tiger = { path = "../bamcensus-tiger" }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
geo = { workspace = true }
wkt = { workspace = true }
tokio-test = { workspace = true }
tokio = { workspace = true }
csv = { workspace = true }
log = { workspace = true }
kdam = { workspace = true }
