[package]
name = "bamcensus"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
exclude = ["test", "**/.DS_Store", "target/"]
readme = "README.md"
repository = "https://github.com/NREL/bamcensus"
documentation = "https://docs.rs/bamcensus"
description = "The Behavior and Advanced Mobility Census Dataset Aggregator"
keywords = [
    "census",
    "acs",
    "lehd",
    "TIGER/Lines",
    "geospatial"
]
categories = ["command-line-utilities", "science", "science::geo"]

[dependencies]
env_logger = { workspace = true }
clap = { workspace = true }
bamcensus-core = { path = "../bamcensus-core", version = "0.1.0" }
bamcensus-acs = { path = "../bamcensus-acs", version = "0.1.0" }
bamcensus-lehd = { path = "../bamcensus-lehd", version = "0.1.0" }
bamcensus-tiger = { path = "../bamcensus-tiger", version = "0.1.0" }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
geo = { workspace = true }
wkt = { workspace = true }
tokio-test = { workspace = true }
tokio = { workspace = true }
csv = { workspace = true }
log = { workspace = true }
kdam = { workspace = true }
