[package]
name = "bamsoda-app-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bamsoda_app_py"
crate-type = ["cdylib"]

[dependencies]
itertools = { workspace = true }
bamsoda-core = { path = "../bamsoda-core" }
bamsoda-lehd = { path = "../bamsoda-lehd" }
bamsoda-acs = { path = "../bamsoda-acs" }
bamsoda-app = { path = "../bamsoda-app" }
pyo3 = { version = "0.22.2", features = [
  "extension-module",
  "serde",
  "abi3-py310",
  # "experimental-async",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wkt = { workspace = true }
