[package]
name = "us-census-acs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Interaction with the American Community Survey API"

[dependencies]
us-census-core = { path = "../us-census-core" }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
itertools = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
