[package]
name = "us-census-api-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "us_census_api_py"
crate-type = ["cdylib"]

[dependencies]
itertools = { workspace = true }
us-census-core = { path = "../us-census-core" }
us-census-lehd = { path = "../us-census-lehd" }
us-census-acs = { path = "../us-census-acs" }
us-census-app = { path = "../us-census-app" }
pyo3 = { version = "0.22.2", features = [
  "extension-module",
  "serde",
  "abi3-py310",
  # "experimental-async",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wkt = { workspace = true }
