[package]
name = "us-census-tiger"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Work with geospatial data in the TIGER/Lines datasets"

[dependencies]
us-census-core = { path = "../us-census-core" }
itertools = { workspace = true }
serde = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7.11", features = ["compat"] }
async-compression = { version = "0.4.12", features = ["tokio"] }
shapefile = { version = "0.6.0", features = ["geo-types"] }
geo-types = "0.7.13"
tempfile = "3.12.0"
zip = "2.2.0"
