[package]
name = "us-census-tiger"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Work with geospatial data in the TIGER/Lines datasets"

[dependencies]
us-census-core = { path = "../us-census-core" }
itertools = { workspace = true }
serde = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
shapefile = { workspace = true }
geo-types = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
kdam = { workspace = true }
